--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: rgb(67, 93, 104);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(74, 115, 118);
+  border: 2px solid lightgray;
+  padding: 15px 25px;
+  border-radius: 8px;
+  width: 500px;
+  height: 300px;
+  justify-content: space-between;
+}
+.name{
+  text-align: center;
+  margin-bottom: 10px;
+}
+.weather-part{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.info{
+  display: flex;
+  flex-direction: column;
+}
+.forecast{
+  display: flex;
+  justify-content: space-between;
+}
+.item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.item img{width: 80px;}
+.input-div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input{
+  margin-bottom: 20px;
+  padding: 6px;
+  width: 230px;
+  border: none;
+  border-radius: 6px;
+}
+.input:focus{outline: none;}
+.search{
+  margin-left: 5px;
+  padding: 6px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  background-color: transparent;
+  color: whitesmoke;
+}
+.search:hover{background-color: rgb(52, 78, 80);}
+.icons{width: 60px;}
+.forecast-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
 }
